# yaggydev

./: .gitignore  README.md  notes.txt  pyproject.toml  wsgi.py  yaggydev.py
documentation/: basics.md  broken.md  docker.md  setup.md  tutorials.md  workflow.md
static/css/: style.css
templates/: index.html
