[project]
name = "yaggydev"
version = "0.1.0"
description = "Project requirements for yaggy.dev"
authors = [
    {name = "Owen Yaggy"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
